--- a/module_01/01_intro_html/03_challenge.html
+++ b/module_01/01_intro_html/03_challenge.html
@@ -11,7 +11,18 @@
     </head>
 
     <body>
-
+        <h1> Months of the year</h1>
+<Ul>
+    <li>January</li>
+    <li>February</li>
+    <li>March</li>
+    
+</ul>
+        <ol>
+     <li>Monday</li>
+    <li>Tuesday</li>
+    <li>Wednesday</li>
+        </Ol>
 
 
     </body>
