--- a/module_01/01_intro_html/03_challenge.html
+++ b/module_01/01_intro_html/03_challenge.html
@@ -11,7 +11,20 @@
     </head>
 
     <body>
+<h1>Months</h1>
+        <ul>
+            <li>January</li>
+            <li>February</li>
+            <li>March</li>
+        
+        </ul>
 
+        <h2>Days</h2>
+        <ol>
+            <li>Monday</li>
+            <li>Tuesday</li>
+            <li>Wednesday</li>
+        </ol>
 
 
     </body>
