Update and rename 01_challenge.html to font-formatting.html

--- a/module_01/04_css_text_properties/font-formatting.html
+++ b/module_01/04_css_text_properties/font-formatting.html
@@ -4,17 +4,33 @@
         <meta charset="utf-8">
         <title>Challenge: Fancy font families</title>
         <style>
+
+            h4{
+                color: midnightblue;
+
+            }
         #flinstones {
+            background-color: green;
+            font-family: sans-serif;
 
         }
 
         #jetsons {
+            background-color: blue;
+            font-family: monospace;
 
         }
 
         #addams {
-
+            background-color: red;
+            font-family: cursive;
         }
+
+        p{
+            background-color: brown;
+            font-family: fantasy;
+        }
+        
         </style>
     </head>
     <body>
