--- a/module_01/02_intro_css/02_challenge.html
+++ b/module_01/02_intro_css/02_challenge.html
@@ -4,6 +4,24 @@
         <meta charset="utf-8">
         <title>Challenge: Seasonal ids</title>
         <style>
+            h1
+        {
+            color: rgb( 200, 50, 60);
+
+        }
+        #summer
+            {
+                color: blue;
+            }
+
+            #winter
+
+            {
+                color: magenta;
+
+            }
+            
+            
 
 
 
