--- a/module_01/02_intro_css/03_challenge.html
+++ b/module_01/02_intro_css/03_challenge.html
@@ -5,6 +5,18 @@
         <title>Challenge: Apples and bananas classes</title>
         <style>
 
+            .apples { 
+
+                color: green;
+            }
+
+            .bananas
+            { 
+                color: brown;
+            }
+
+            
+
         </style>
     </head>
     <body>
