--- a/module_01/03_more_html_tags/01_challenge.html
+++ b/module_01/03_more_html_tags/01_challenge.html
@@ -9,9 +9,12 @@
         <h1>Links I love</h1>
 
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li> Premium Times </li>
+            <a href= "https://www.premiumtimesng.com/">To read more about the website</a>
+            <li>Khan Academy </li>
+            <a href= "https://www.khanacademy.org/"> To read about the academy. </a>
+            <li>Learn with Google</li>
+            <a href= https://grow.google/intl/ssa-en/courses-and-tools/> To read more. </a>
         </ul>
 
         <img src="https://www.kasandbox.org/programming-images/cute/Heart.png">
