--- a/module_01/04_css_text_properties/01_challenge.html
+++ b/module_01/04_css_text_properties/01_challenge.html
@@ -5,14 +5,17 @@
         <title>Challenge: Fancy font families</title>
         <style>
         #flinstones {
+            font-family: sans-serif, cursive;
 
         }
 
         #jetsons {
+            font-family: fantasy;
 
         }
 
         #addams {
+            font-family: monspace;
 
         }
         </style>
