--- a/module_01/04_css_text_properties/02_challenge.html
+++ b/module_01/04_css_text_properties/02_challenge.html
@@ -4,11 +4,17 @@
         <meta charset="utf-8">
         <title>Challenge: Great big font sizes</title>
         <style>
+
+            body{
+
+                font-size: 30px;
             .big {
+                font-size: 2em;
 
             }
 
             .bigger {
+                font-size: 4em;
 
             }
         </style>
