--- a/module_01/04_css_text_properties/03_challenge.html
+++ b/module_01/04_css_text_properties/03_challenge.html
@@ -5,9 +5,11 @@
         <title>Challenge: Famous font formats</title>
         <style>
             .declaration {
+                font-style: bold;
             }
 
             .quote {
+                font-style: italic;
             }
         </style>
     </head>
