--- a/module_01/06_css_layout/03_challenge.html
+++ b/module_01/06_css_layout/03_challenge.html
@@ -9,9 +9,18 @@
             }
             .photo-gallery {
                 background: rgb(255, 254, 217);
+                width: 200px;
+                margin-right: 10px;
+                margin-bottom: 10px;
+                  
             }
             .photo {
                 width: 200px;
+                margin-right: 20px;
+                margin-bottom: 20px;
+                border-top: 10px solid red;
+                border:  20px dashed rgb(12, 11, 23);
+                overflow: auto; 
             }
         </style>
     </head>
