--- a/module_01/06_css_layout/04_challenge.html
+++ b/module_01/06_css_layout/04_challenge.html
@@ -11,8 +11,19 @@
                 padding: 5px;
                 width: 262px;
             }
+            #planet{
+                position: absolute;
+                top: 20px;
+                left: 20px;
+                z-index:1;
+            }
+                
 
             #creature {
+                position: absolute;
+                top: 50px;
+                left: 50px;
+                z-index:4;
 
             }
         </style>
