--- a/module_01/06_css_layout/05_challenge.html
+++ b/module_01/06_css_layout/05_challenge.html
@@ -12,9 +12,16 @@
             }
             #cloud-pic {
                 width: 100px;
+                float: left;
+                margin-bottom: 10px;
+                margin-right: 10px
             }
             #cloud-sidebar {
                 background: rgb(255, 255, 219);
+                padding: 7px;
+                float: left;
+                margin-left: 7px;
+                margin-right: 7px;
             }
         </style>
     </head>
