--- a/module_01/07_more_css_selectors/02_challenge.html
+++ b/module_01/07_more_css_selectors/02_challenge.html
@@ -5,13 +5,16 @@
         <title>Challenge: Classes of elements</title>
         <style>
             .metal {
+                background-color: red;
                 color: red;
             }
             .non-metal {
-                color: blue;
+                background-color: blue;
+                color: white;
             }
             .semi-metal {
-                color: purple;
+                background-color: purple;
+                color: white;
             }
         </style>
     </head>
