--- a/module_01/07_more_css_selectors/03_challenge.html
+++ b/module_01/07_more_css_selectors/03_challenge.html
@@ -5,12 +5,17 @@
         <title>Challenge: Descendants of Khan</title>
         <style>
             .emperor {
-                font-family: cursive;
+              
+            }
+            .table {
+                color:red;
+                background-color: transparent;
             }
 
             .reign {
                 font-family: monospace;
             }
+            
         </style>
     </head>
     <body>
@@ -28,15 +33,15 @@
         </thead>
         <tbody>
             <tr>
-                <td class="emperor">Ögedei Khan</td>
+                <td class="emperor table">Ögedei Khan</td>
                 <td class="reign">1229-1241</td>
             </tr>
             <tr>
-                <td class="emperor">Kublai Khan</td>
+                <td class="emperor table">Kublai Khan</td>
                 <td class="reign">1260-1294</td>
             </tr>
             <tr>
-                <td class="emperor">Temür Khan</td>
+                <td class="emperor table">Temür Khan</td>
                 <td class="reign">1294-1307</td>
             </tr>
         </tbody>
